fix: sidebar overflow on too many billing teams

--- a/app/src/features/settings/components/SettingsIndex/index.scss
+++ b/app/src/features/settings/components/SettingsIndex/index.scss
@@ -38,6 +38,7 @@
   border-right: 1px solid var(--surface-2);
   background: var(--surface-1);
   box-shadow: -2px 0px 12px 0px rgba(0, 0, 0, 0.28);
+  overflow-y: auto;
 
   &-section-title {
     color: var(--neutrals-gray-300);
